--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -70,16 +70,16 @@ function start(resolution)
                         {t: 2, value: 1},
                         ]);
                     this.addAction(null, "alpha", new ms.state.State(1, 2, ____i2));                    
-            this.target = null;
+                this.target = null;
             if (this.init)
                 this.init();
             },
 });
-            application.target = 0;
+                application.target = 0;
 test_sequence =
 new fade_in(
 g_sequence_manager);
-        test_sequence = test_sequence;
+        var test_sequence = test_sequence;
 	test_sequence.display = function() 
 	{
 		console.log("test_sequence> Target: " + application.target);
@@ -93,7 +93,7 @@ test_sequence1.start();
 test_sequence1 =
 new fade_in(
 g_sequence_manager);
-        test_sequence1 = test_sequence1;
+        var test_sequence1 = test_sequence1;
 	test_sequence1.display = function() 
 	{
 		console.log("test_sequence1> Target: " + application.target);
