--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -9,19 +9,21 @@
 	background:FloralWhite;
 	}
 </style>
+<script type="text/javascript" src="../js/three/Detector.js"></script>
+<script type="text/javascript" src="../js/three/Three.js"></script>
+<script type="text/javascript" src="../js/three/Stats.js"></script>
+<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-		<script type="text/javascript" src="../js/three/Three.js"></script>
-		<script type="text/javascript" src="../js/three/Stats.js"></script>
-		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="../js/three/Utils.js"></script>
-        <script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
@@ -34,6 +36,7 @@ var app_height = window.innerHeight;
 var anim_1;var fade_1;var lbl0;
 var application = {};
 application.events = new ms.event.EventHolder();
+		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -41,7 +44,6 @@ application.events = new ms.event.EventHolder();
 				height: window.innerHeight,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
@@ -103,7 +105,7 @@ application.events.dispatch("switch_cameras", []);
                         {t: 6, value: 0},
                         ]);
                     this.addAction(null, "x", new ms.state.State(2, 6, ____i2));                    
-            this.target = null;
+                this.target = null;
             if (this.init)
                 this.init();
             },
@@ -143,7 +145,7 @@ application.events.dispatch("switch_cameras", []);
                         {t: 6, value: 100},
                         ]);
                     this.addAction(null, "alpha", new ms.state.State(2, 6, ____i4));                    
-            this.target = null;
+                this.target = null;
             if (this.init)
                 this.init();
             },
@@ -157,22 +159,22 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 75,1.5,1,3000);
-            camera_1.position.z = 1000;
+                camera_1.position.z = 1000;
 var light = 
 new THREE.DirectionalLight(
 1677);
 		;
 	scene.addLight(light);
-            light.position.y = 0.5;
-            light.position.z = 1;
+                light.position.y = 0.5;
+                light.position.z = 1;
 	    var cylinder_1_cylinder = 
 new THREE.Cylinder(
 200,100,100,500);
 	    var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
 		cylinder_1.events = new ms.event.EventHolder();
-            set_rotation_x(cylinder_1.rotation, 10);
-            set_rotation_y(cylinder_1.rotation, 10);
+                set_rotation_x(cylinder_1.rotation, 10);
+                set_rotation_y(cylinder_1.rotation, 10);
 	var ev_parent = this;
 	cylinder_1.events.addListener("click", function()
 	{    
@@ -216,9 +218,8 @@ if(ui)
 		    lbl0 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl0 = lbl0;
-            lbl0.set_x(240);
-            lbl0.set_y(75);
-            lbl0.text("Click the cylinder to animate it");
+                lbl0.text("Click the cylinder to animate it");
+                lbl0.position(240, 75);
 		g_ui.fill_background = false;
 	});
 }
@@ -257,7 +258,7 @@ function animate() {
 	render();
 	if(ui)
 		ui.draw(drawingCanvas.getContext('2d'));
-	}
+}
 </script>
 </body>
 </html>
