--- a/xss/production/test/3js_class_test_1.html
+++ b/xss/production/test/3js_class_test_1.html
@@ -14,7 +14,6 @@
 <script type="text/javascript" src="../js/prototype.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
-<script type="text/javascript" src="../js/colors.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/three/Three.js"></script>
 		<script type="text/javascript" src="../js/three/Stats.js"></script>
@@ -45,7 +44,7 @@ application.events = new ms.event.EventHolder();
 			var g_ui = ui;
 			var g_ui_root = ui.root;
 		}
-		var streamer = new ms.streamer.Streamer();
+		var streamer = new ms.streamer.Streamer();		
 	// --------RESOURCES---------
         var global_package_items = [];
                 global_package_items.push(
@@ -92,7 +91,15 @@ application.events = new ms.event.EventHolder();
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
-});
+});	
+		global_package_items.push({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});
         var global_package = new ms.streamer.Package(streamer, global_package_items);	
 		global_package.load();	
     // --------RESOURCES---------
@@ -110,29 +117,32 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
+var my_plane;var my_plane;var scene;var camera_1;
         function create_my_plane(
     width,height,x_segments,y_segments ) { 
-            var my_plane;
 	    var my_plane_plane = 
 new THREE.Plane(
 width,height,x_segments,y_segments);
-	    var my_plane = new THREE.Mesh(my_plane_plane, new THREE.MeshBasicMaterial());
+	    my_plane = new THREE.Mesh(my_plane_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(my_plane);
 		my_plane.events = new ms.event.EventHolder();
         my_plane.image = null;
         my_plane.image_set = function (value)
         {
             my_plane.image = value;
-            this.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource(value).asset);
+            this.materials[0].map = new THREE.Texture(streamer.get_resource(value).data);
         };
         return my_plane;
         }
-var scene = 
+threejs_load_resources(function()
+{
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 45,1.5,1,10000);
+		active_camera = camera_1;
             camera_1.position.z = 1000;
             application.img_array = ["images/test1.png", "images/test2.png", "images/test3.png", "images/test4.png", "images/test5.png"];
             application.i = 0;
@@ -156,8 +166,7 @@ application.i = application.i + 1;
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
+{	
 	drawingCanvas.onmousemove = function(ev)
 	{
 		ui.mousemove(ev.clientX, ev.clientY);                  
@@ -176,8 +185,7 @@ if(ui)
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Click wherever to create a randomly positioned plane");
-		g_ui.fill_background = false;
-	});
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -207,6 +215,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,600,400);
