--- a/xss/production/test/3js_class_test_2.html
+++ b/xss/production/test/3js_class_test_2.html
@@ -45,9 +45,17 @@ application.events = new ms.event.EventHolder();
 			var g_ui = ui;
 			var g_ui_root = ui.root;
 		}
-		var streamer = new ms.streamer.Streamer();
+		var streamer = new ms.streamer.Streamer();		
 	// --------RESOURCES---------
         var global_package_items = [];
+		global_package_items.push({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});
         var global_package = new ms.streamer.Package(streamer, global_package_items);	
 		global_package.load();	
     // --------RESOURCES---------
@@ -65,13 +73,13 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
+var my_cylinder;var my_cylinder;var scene;var camera_1;
         function create_my_cylinder(
     segments,top_radius,bottom_radius,height,topoffset,bottomoffset ) { 
-            var my_cylinder;
 	    var my_cylinder_cylinder = 
 new THREE.Cylinder(
 segments,top_radius,bottom_radius,height,topoffset,bottomoffset);
-	    var my_cylinder = new THREE.Mesh(my_cylinder_cylinder, new THREE.MeshBasicMaterial());
+	    my_cylinder = new THREE.Mesh(my_cylinder_cylinder, new THREE.MeshBasicMaterial());
 	    scene.addObject(my_cylinder);
 		my_cylinder.events = new ms.event.EventHolder();
         my_cylinder.hex = null;
@@ -83,25 +91,28 @@ segments,top_radius,bottom_radius,height,topoffset,bottomoffset);
 	var ev_parent = this;
 	my_cylinder.events.addListener("mousein", function()
 	{    
-		my_cylinder.materials[0].color.setHex(LightGreen);
+		my_cylinder.materials[0].color.setHex(lightgreen);
 	}
 	);
 		application.are_obj_events = true;
 	var ev_parent = this;
 	my_cylinder.events.addListener("mouseout", function()
 	{    
-		my_cylinder.materials[0].color.setHex(Red);
+		my_cylinder.materials[0].color.setHex(red);
 	}
 	);
 		application.are_obj_events = true;
         return my_cylinder;
         }
-var scene = 
+threejs_load_resources(function()
+{
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 75,1.5,1,3000);
+		active_camera = camera_1;
             camera_1.position.z = 1000;
 	var ev_parent = this;
 	application.events.addListener("click", function(x,y)
@@ -111,7 +122,7 @@ create_my_cylinder(
 200,100,100,500
 )
 ;
-cylinder_1.hex_set(Red);
+cylinder_1.hex_set(red);
 cylinder_1.position.x = x;
 cylinder_1.position.y = y;
 set_rotation_x(cylinder_1.rotation, 10);
@@ -120,8 +131,7 @@ scene.addObject(cylinder_1);
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
+{	
 	drawingCanvas.onmousemove = function(ev)
 	{
 		ui.mousemove(ev.clientX, ev.clientY);                  
@@ -146,8 +156,7 @@ if(ui)
             lbl1.set_x(200);
             lbl1.set_y(100);
             lbl1.text("Pass the mouse over a cylinder to change its color");
-		g_ui.fill_background = false;
-	});
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -177,6 +186,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,600,400);
