--- a/xss/production/test/3js_cube.html
+++ b/xss/production/test/3js_cube.html
@@ -8,18 +8,21 @@
 	body{
 	}
 </style>
+<script type="text/javascript" src="../js/three/Detector.js"></script>
+<script type="text/javascript" src="../js/three/Three.js"></script>
+<script type="text/javascript" src="../js/three/Stats.js"></script>
+<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-		<script type="text/javascript" src="../js/three/Three.js"></script>
-		<script type="text/javascript" src="../js/three/Stats.js"></script>
-		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
@@ -32,6 +35,7 @@ var app_height = window.innerHeight;
 var lbl0;
 var application = {};
 application.events = new ms.event.EventHolder();
+		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -39,7 +43,6 @@ application.events = new ms.event.EventHolder();
 				height: window.innerHeight,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
@@ -90,39 +93,39 @@ color:Math.random() * 0xffffff
 var plane_material = new THREE.MeshBasicMaterial({
 color:Grey
 	});
-            set_material_alpha(plane_material, 50);
+                set_material_alpha(plane_material, 50);
 var scene = 
 new THREE.Scene(
 );
 var camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-            camera_1.position.y = 300;
-            camera_1.position.z = 500;
+                camera_1.position.y = 300;
+                camera_1.position.z = 500;
 	    var cube_1_cube = 
 new THREE.Cube(
 200,200,200,1,1,1,materials);
 	    var cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
 		cube_1.events = new ms.event.EventHolder();
-            cube_1.position.y = 150;
+                cube_1.position.y = 150;
 	    var plane_1_plane = 
 new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
-            set_rotation_x(plane_1.rotation, -90);
-            application.x_target_rotation = 0;
-            application.x_target_rotation_on_mouse_down = 0;
-            application.mouse_x = 0;
-            application.mouse_x_on_mouse_down = 0;
-            application.y_target_rotation = 0;
-            application.y_target_rotation_on_mouse_down = 0;
-            application.mouse_y = 0;
-            application.mouse_y_on_mouse_down = 0;
-            application.window_half_x = app_width / 2;
-            application.window_half_y = app_height / 2;
+                set_rotation_x(plane_1.rotation, -90);
+                application.x_target_rotation = 0;
+                application.x_target_rotation_on_mouse_down = 0;
+                application.mouse_x = 0;
+                application.mouse_x_on_mouse_down = 0;
+                application.y_target_rotation = 0;
+                application.y_target_rotation_on_mouse_down = 0;
+                application.mouse_y = 0;
+                application.mouse_y_on_mouse_down = 0;
+                application.window_half_x = app_width / 2;
+                application.window_half_y = app_height / 2;
 	var ev_parent = this;
 	application.events.addListener("mousedown", function(x,y)
 	{    
@@ -167,9 +170,8 @@ if(ui)
 		    lbl0 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl0 = lbl0;
-            lbl0.set_x(200);
-            lbl0.set_y(75);
-            lbl0.text("Drag mouse to spin the cube");
+                lbl0.text("Drag mouse to spin the cube");
+                lbl0.position(200, 75);
 		g_ui.fill_background = false;
 	});
 }
@@ -208,7 +210,7 @@ function animate() {
 	render();
 	if(ui)
 		ui.draw(drawingCanvas.getContext('2d'));
-	}
+}
 </script>
 </body>
 </html>
