--- a/xss/production/test/ms3.html
+++ b/xss/production/test/ms3.html
@@ -6,12 +6,13 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-        <script type="text/javascript" src="../js/ms-state.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ripple.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -21,7 +22,8 @@ var g_canvas;
 var g_ui_root;
 var application = {};
 application.events = new ms.event.EventHolder();
-var SoundUtils = new ms.ui.SoundUtils();
+var Sound = new ms.ui.Sound();
+		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -29,7 +31,6 @@ var SoundUtils = new ms.ui.SoundUtils();
 				height: 1000,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
@@ -40,8 +41,8 @@ var SoundUtils = new ms.ui.SoundUtils();
             return a + (b - a)*t;
         }		
 		var streamer = new ms.streamer.Streamer();
-        var global_package_items = [];
-                global_package_items.push(
+        var def_package_items = [];
+                def_package_items.push(
             {
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
@@ -50,7 +51,7 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	null,
 		animations:		[]
 });
-                global_package_items.push(
+                def_package_items.push(
             {
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
@@ -59,8 +60,8 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	null,
 		animations:		[]
 });
-        var global_package = new ms.streamer.Package(streamer, global_package_items);	
-		global_package.load();	
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	function updater()  
@@ -80,7 +81,7 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
 var rr1;var r1;var r2;var r3;var c1;var c2;var img1;var img2;var s1;
-            application.increment = 10;
+                application.increment = 10;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -113,50 +114,32 @@ window.onload = function()
 		    rr1 = new ms.ui.Rectangle( 
 	    "black",null,null,g_ui_root.manager, g_ui_root);
         rr1 = rr1;
-            rr1.set_x(70);
-            rr1.set_y(30);
-            rr1.set_width(100);
-            rr1.set_height(3);
+                rr1.rect(70, 30, 100, 3);
 		    r1 = new ms.ui.Rectangle( 
 	    "black",null,null,g_ui_root.manager, g_ui_root);
         r1 = r1;
-            r1.set_x(120);
-            r1.set_y(20);
-            r1.set_width(3);
-            r1.set_height(0);
+                r1.rect(120, 20, 3, 0);
 		    r2 = new ms.ui.Rectangle( 
 	    "black",null,null,g_ui_root.manager, g_ui_root);
         r2 = r2;
-            r2.set_x(40);
-            r2.set_y(140);
-            r2.set_width(103);
-            r2.set_height(3);
+                r2.rect(40, 140, 103, 3);
 		    r3 = new ms.ui.Rectangle( 
 	    "black",null,null,g_ui_root.manager, g_ui_root);
         r3 = r3;
-            r3.set_x(20);
-            r3.set_y(20);
-            r3.set_width(3);
-            r3.set_height(103);
+                r3.rect(20, 20, 3, 103);
 		    c1 = new ms.ui.Circle( 
 	    null,"black",20,g_ui_root.manager, g_ui_root);
         c1 = c1;
-            c1.set_x(35);
-            c1.set_y(35);
-            c1.set_radius(60);
+                c1.set_radius(60);
+                c1.position(35, 35);
 		    c2 = new ms.ui.Circle( 
 	    null,"black",10,g_ui_root.manager, g_ui_root);
         c2 = c2;
-            c2.set_x(75);
-            c2.set_y(350);
-            c2.set_radius(60);
+                c2.set_radius(60);
+                c2.position(75, 350);
 		    img1 = new ms.ui.Image( 
 	    "images/test2.png",g_ui_root.manager, g_ui_root);
         img1 = img1;
-            img1.set_x(100);
-            img1.set_y(100);
-            img1.set_width(130);
-            img1.set_height(130);
 	var ev_parent = this;
 	img1.events.addListener("click", function()
 	{    
@@ -165,13 +148,11 @@ img1.set_height(img1.get_height() + application.increment);
 	}
 	);
 		application.are_obj_events = true;
+                img1.rect(100, 100, 130, 130);
 		    img2 = new ms.ui.Image( 
 	    "images/test2.png",g_ui_root.manager, g_ui_root);
         img2 = img2;
-            img2.set_x(300);
-            img2.set_y(300);
-            img2.set_width(80);
-            img2.set_height(80);
+                img2.rect(300, 300, 80, 80);
 s1 =
 new ms.state.Sequence(
 g_sequence_manager);
@@ -222,8 +203,9 @@ g_sequence_manager);
 }
 </script>
 </head>
-<body>	
-	<canvas id="myCanvas" width="1000" height="1000"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+<body>
+	<canvas id="myCanvas" width="1000" height="1000">
+		<p>Your browser doesn't support canvas.</p>
+	</canvas>
 </body>
 </html>
