--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -6,12 +6,12 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-        <script type="text/javascript" src="../js/ms-state.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -21,7 +21,7 @@ var g_canvas;
 var g_ui_root;
 var application = {};
 application.events = new ms.event.EventHolder();
-var SoundUtils = new ms.ui.SoundUtils();
+var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
 			{
@@ -29,7 +29,6 @@ var SoundUtils = new ms.ui.SoundUtils();
 				height: 400,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
@@ -38,101 +37,71 @@ var SoundUtils = new ms.ui.SoundUtils();
         function default_interpolate(a, b, t)
         {
             return a + (b - a)*t;
-        }		
+        }
 		var streamer = new ms.streamer.Streamer();
-        var global_package_items = [];
-                global_package_items.push(
+        var def_package_items = [];
+                def_package_items.push(
             {
-		id:				"__image1",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/progress.full.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image1",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/progress.full.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image2",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/progress.empty.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image2",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/progress.empty.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image3",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/smile_grin_48.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image3",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_grin_48.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image4",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/smile_sad_48.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image4",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_sad_48.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image5",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/arrow_left.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image5",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/arrow_left.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image6",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/arrow_right.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image6",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/arrow_right.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image7",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/arrow_right_48.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image7",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/arrow_right_48.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image8",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/arrow_right_green_48.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image8",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/arrow_right_green_48.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image9",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/arrow_left_48.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image9",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/arrow_left_48.png"
 });
-                global_package_items.push(
+                def_package_items.push(
             {
-		id:				"__image10",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/arrow_left_green_48.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image10",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/arrow_left_green_48.png"
 });
-        var global_package = new ms.streamer.Package(streamer, global_package_items);	
-		global_package.load();	
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	function updater()  
@@ -144,15 +113,12 @@ function start(resolution)
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		application.events.dispatch("updates", []);	
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var main;var test1;var lbl1;var btn1;var test2;var pb1;var btn2;var btn3;var lbl2;var btnNext;var btnPrev;
-            application.clicks = 0;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -184,28 +150,21 @@ window.onload = function()
 	};	
 		    main = new ms.ui.Switch( 
 	    g_ui_root.manager, g_ui_root);
-        main = main;
-            main.set_x(0);
-            main.set_y(0);
-            main.set_width(600);
-            main.set_height(250);
+        var main = main;
+                main.rect(0, 0, 600, 250);
 		    test1 = new ms.ui.Component( 
 	    main.manager, main);test1.mouse_thru = true;
-        test1 = test1;
+        var test1 = test1;
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",test1.manager, test1);
-        lbl1 = lbl1;
-            lbl1.set_x(270);
-            lbl1.set_y(200);
-            lbl1.set_rotation(-0.200000003);
-            lbl1.text("click smiley");
+        var lbl1 = lbl1;
+                lbl1.set_rotation(-0.200000003);
+                lbl1.text("click smiley");
+                lbl1.position(270, 200);
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",test1.manager, test1);
-        btn1 = btn1;
-            btn1.set_placement("center");
-            btn1.set_rotation(0.200000003);
-            btn1.set_width(50);
-            btn1.set_height(50);
+        var btn1 = btn1;
+                btn1.set_rotation(0.200000003);
 	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
@@ -214,58 +173,43 @@ lbl1.text("Got " + application.clicks + " smileys");
 btn1.set_rotation(btn1.get_rotation() + 0.200000003);
 	}
 	);
-		application.are_obj_events = true;
+ btn1.center(50, 50); 
 		    test2 = new ms.ui.Component( 
 	    main.manager, main);test2.mouse_thru = true;
-        test2 = test2;
+        var test2 = test2;
 		    pb1 = new ms.ui.ProgressBar( 
 	    null,test2.manager, test2);
-        pb1 = pb1;
-            pb1.set_placement("center");
-            pb1.set_width(150);
-            pb1.set_height(10);
+        var pb1 = pb1;
+ pb1.center(150, 10); 
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_left.png",test2.manager, test2);
-        btn2 = btn2;
-            btn2.set_x(200);
-            btn2.set_y(115);
-            btn2.set_width(20);
-            btn2.set_height(20);
+        var btn2 = btn2;
 	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() - 1);
 	}
 	);
-		application.are_obj_events = true;
+                btn2.rect(200, 115, 20, 20);
 		    btn3 = new ms.ui.Image( 
 	    "images/arrow_right.png",test2.manager, test2);
-        btn3 = btn3;
-            btn3.set_x(380);
-            btn3.set_y(115);
-            btn3.set_width(20);
-            btn3.set_height(20);
+        var btn3 = btn3;
 	var ev_parent = this;
 	btn3.events.addListener("click", function()
 	{    
 		pb1.value(pb1.get_value() + 1);
 	}
 	);
-		application.are_obj_events = true;
+                btn3.rect(380, 115, 20, 20);
 		    lbl2 = new ms.ui.Label( 
 	    "Verdana",test2.manager, test2);
-        lbl2 = lbl2;
-            lbl2.set_x(210);
-            lbl2.set_y(200);
-            lbl2.set_rotation(0.200000003);
-            lbl2.text("click small arrows to adjust percentage");
+        var lbl2 = lbl2;
+                lbl2.set_rotation(0.200000003);
+                lbl2.text("click small arrows to adjust percentage");
+                lbl2.position(210, 200);
 		    btnNext = new ms.ui.Button( 
 	    "images/arrow_right_green_48.png","images/arrow_right_48.png",g_ui_root.manager, g_ui_root);
-        btnNext = btnNext;
-            btnNext.set_x(320);
-            btnNext.set_y(300);
-            btnNext.set_width(100);
-            btnNext.set_height(50);
+        var btnNext = btnNext;
 	var ev_parent = this;
 	btnNext.events.addListener("click", function()
 	{    
@@ -276,15 +220,11 @@ main.active(main.get_active() + 1);
 btnNext.set_rotation(btnNext.get_rotation() + 0.200000003);
 	}
 	);
-		application.are_obj_events = true;
+                btnNext.rect(320, 300, 100, 50);
 		    btnPrev = new ms.ui.Button( 
 	    "images/arrow_left_green_48.png","images/arrow_left_48.png",g_ui_root.manager, g_ui_root);
-        btnPrev = btnPrev;
-            btnPrev.set_x(220);
-            btnPrev.set_y(300);
-            btnPrev.set_rotation(0.400000006);
-            btnPrev.set_width(50);
-            btnPrev.set_height(50);
+        var btnPrev = btnPrev;
+                btnPrev.set_rotation(0.400000006);
 	var ev_parent = this;
 	btnPrev.events.addListener("click", function()
 	{    
@@ -294,7 +234,8 @@ main.active(main.get_active() - 1);
 }
 	}
 	);
-		application.are_obj_events = true;
+                btnPrev.rect(220, 300, 50, 50);
+                application.clicks = 0;
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -307,7 +248,10 @@ main.active(main.get_active() - 1);
 			{
 				ui.keypress(ev.keyCode);                  
 			};
-            application.events.dispatch("init", []);
+            if (application.init)
+            {
+                application.init();
+            }
             start();
 			ui.draw(drawingCanvas.getContext('2d'));
 		});
@@ -315,8 +259,9 @@ main.active(main.get_active() - 1);
 }
 </script>
 </head>
-<body>	
-	<canvas id="myCanvas" width="600" height="400"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+<body>
+	<canvas id="myCanvas" width="600" height="400">
+		<p>Your browser doesn't support canvas.</p>
+	</canvas>
 </body>
 </html>
