--- a/xss/production/test/newseq1.html
+++ b/xss/production/test/newseq1.html
@@ -6,12 +6,12 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-        <script type="text/javascript" src="../js/ms-state.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -21,7 +21,7 @@ var g_canvas;
 var g_ui_root;
 var application = {};
 application.events = new ms.event.EventHolder();
-var SoundUtils = new ms.ui.SoundUtils();
+var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
 			{
@@ -29,7 +29,6 @@ var SoundUtils = new ms.ui.SoundUtils();
 				height: 400,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
@@ -38,20 +37,17 @@ var SoundUtils = new ms.ui.SoundUtils();
         function default_interpolate(a, b, t)
         {
             return a + (b - a)*t;
-        }		
+        }
 		var streamer = new ms.streamer.Streamer();
-        var global_package_items = [];
-                global_package_items.push(
+        var def_package_items = [];
+                def_package_items.push(
             {
-		id:				"__image1",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/img1.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
+		id:"__image1",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/img1.png"
 });
-        var global_package = new ms.streamer.Package(streamer, global_package_items);	
-		global_package.load();	
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	function updater()  
@@ -63,14 +59,13 @@ function start(resolution)
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		application.events.dispatch("updates", []);	
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
         window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
-var img1;var fade_in;
+var fade_in;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -102,22 +97,18 @@ window.onload = function()
 	};	
 		    img1 = new ms.ui.Image( 
 	    "images/img1.png",g_ui_root.manager, g_ui_root);
-        img1 = img1;
-            img1.set_x(100);
-            img1.set_y(100);
-            img1.set_width(50);
-            img1.set_height(50);
+        var img1 = img1;
 	var ev_parent = this;
 	img1.events.addListener("click", function()
 	{    
 		fade_in.start();
 	}
 	);
-		application.are_obj_events = true;
+                img1.rect(100, 100, 50, 50);
 fade_in =
 new ms.state.Sequence(
 g_sequence_manager);
-        fade_in = fade_in;
+        var fade_in = fade_in;
             fade_in.parent_sequence = null;
                     var ____i1 = new ms.state.Interpolator(
                         "alpha", 
@@ -155,7 +146,10 @@ g_sequence_manager);
 			{
 				ui.keypress(ev.keyCode);                  
 			};
-            application.events.dispatch("init", []);
+            if (application.init)
+            {
+                application.init();
+            }
             start();
 			ui.draw(drawingCanvas.getContext('2d'));
 		});
@@ -163,8 +157,9 @@ g_sequence_manager);
 }
 </script>
 </head>
-<body>	
-	<canvas id="myCanvas" width="600" height="400"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+<body>
+	<canvas id="myCanvas" width="600" height="400">
+		<p>Your browser doesn't support canvas.</p>
+	</canvas>
 </body>
 </html>
