--- a/xss/production/test/ui_figures.html
+++ b/xss/production/test/ui_figures.html
@@ -6,11 +6,12 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -20,7 +21,8 @@ var g_canvas;
 var g_ui_root;
 var application = {};
 application.events = new ms.event.EventHolder();
-var SoundUtils = new ms.ui.SoundUtils();
+var Sound = new ms.ui.Sound();
+		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -28,14 +30,13 @@ var SoundUtils = new ms.ui.SoundUtils();
 				height: 600,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
 		}
 		var streamer = new ms.streamer.Streamer();
-        var global_package_items = [];
-                global_package_items.push(
+        var def_package_items = [];
+                def_package_items.push(
             {
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
@@ -44,7 +45,7 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	null,
 		animations:		[]
 });
-                global_package_items.push(
+                def_package_items.push(
             {
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
@@ -53,8 +54,8 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	null,
 		animations:		[]
 });
-        var global_package = new ms.streamer.Package(streamer, global_package_items);	
-		global_package.load();	
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	function updater()  
@@ -73,8 +74,8 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
 var div1;var c1;var r1;var p1;var line1;var btn;
-            application.x = null;
-            application.y = null;
+                application.x = null;
+                application.y = null;
 window.onload = function() 
 {
 	drawingCanvas = document.getElementById("myCanvas");
@@ -107,16 +108,11 @@ window.onload = function()
 		    div1 = new ms.ui.Component( 
 	    g_ui_root.manager, g_ui_root);div1.mouse_thru = true;
         div1 = div1;
-            div1.set_x(0);
-            div1.set_y(0);
-            div1.set_width(400);
-            div1.set_height(200);
+                div1.rect(0, 0, 400, 200);
 		    c1 = new ms.ui.Circle( 
 	    "cyan","black",3,div1.manager, div1);
         c1 = c1;
-            c1.set_x(50);
-            c1.set_y(50);
-            c1.set_radius(60);
+                c1.set_radius(60);
 	var ev_parent = this;
 	c1.events.addListener("click", function()
 	{    
@@ -124,15 +120,12 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                c1.position(50, 50);
 		    r1 = new ms.ui.Rectangle( 
 	    "green",null,null,div1.manager, div1);
         r1 = r1;
-            r1.set_x(200);
-            r1.set_y(50);
-            r1.set_width(60);
-            r1.set_height(90);
-            r1.set_rotation(-30);
-            r1.alpha(60);
+                r1.set_rotation(-30);
+                r1.alpha(60);
 	var ev_parent = this;
 	r1.events.addListener("click", function()
 	{    
@@ -140,10 +133,11 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                r1.rect(200, 50, 60, 90);
 		    p1 = new ms.ui.Polygon( 
 	    "pink","brown",3,div1.manager, div1);
         p1 = p1;
-            p1.alpha(40);
+                p1.alpha(40);
 		p1.points.push({id:"point1", x:300, y:300});
 		p1.points.push({id:"point2", x:300, y:250});
 		p1.points.push({id:"point3", x:390, y:200});
@@ -151,18 +145,14 @@ window.onload = function()
 		    line1 = new ms.ui.Line( 
 	    div1.manager, div1);
         line1 = line1;
-            line1.set_x1(500);
-            line1.set_y1(350);
-            line1.set_x2(500);
-            line1.set_y2(500);
+                line1.set_x1(500);
+                line1.set_y1(350);
+                line1.set_x2(500);
+                line1.set_y2(500);
 		    btn = new ms.ui.Button( 
 	    "images/smile_grin_48.png","images/smile_sad_48.png",g_ui_root.manager, g_ui_root);
         btn = btn;
-            btn.set_x(270);
-            btn.set_y(200);
-            btn.set_rotation(45);
-            btn.set_width(50);
-            btn.set_height(50);
+                btn.set_rotation(45);
 	var ev_parent = this;
 	btn.events.addListener("click", function()
 	{    
@@ -184,6 +174,7 @@ line1.set_lineWidth(line1.lineWidth + 1);
 	}
 	);
 		application.are_obj_events = true;
+                btn.rect(270, 200, 50, 50);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -204,8 +195,9 @@ line1.set_lineWidth(line1.lineWidth + 1);
 }
 </script>
 </head>
-<body>	
-	<canvas id="myCanvas" width="600" height="600"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+<body>
+	<canvas id="myCanvas" width="600" height="600">
+		<p>Your browser doesn't support canvas.</p>
+	</canvas>
 </body>
 </html>
