--- a/xss/production/test/ui_sprite.html
+++ b/xss/production/test/ui_sprite.html
@@ -6,11 +6,12 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -20,7 +21,8 @@ var g_canvas;
 var g_ui_root;
 var application = {};
 application.events = new ms.event.EventHolder();
-var SoundUtils = new ms.ui.SoundUtils();
+var Sound = new ms.ui.Sound();
+		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -28,14 +30,13 @@ var SoundUtils = new ms.ui.SoundUtils();
 				height: 600,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
 		}
 		var streamer = new ms.streamer.Streamer();
-        var global_package_items = [];
-                global_package_items.push(
+        var def_package_items = [];
+                def_package_items.push(
             {
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
@@ -44,7 +45,7 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	null,
 		animations:		[]
 });
-                global_package_items.push(
+                def_package_items.push(
             {
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
@@ -53,7 +54,7 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	null,
 		animations:		[]
 });
-                global_package_items.push(
+                def_package_items.push(
             {
 		id:				"monster_sheet",
 		resource_type:	RESOURCE_SPRITE,
@@ -62,10 +63,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	64,
 		animations:		[]
 });
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "monster_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "monster_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_run_l",
 					frame_row:	0,
@@ -75,10 +76,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "monster_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "monster_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_run_d",
 					frame_row:	2,
@@ -88,10 +89,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		true
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "monster_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "monster_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_idle",
 					frame_row:	1,
@@ -101,7 +102,7 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-                global_package_items.push(
+                def_package_items.push(
             {
 		id:				"mario_sheet",
 		resource_type:	RESOURCE_SPRITE,
@@ -110,10 +111,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	45,
 		animations:		[]
 });
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "mario_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "mario_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_idle_r",
 					frame_row:	0,
@@ -123,10 +124,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "mario_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "mario_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_idle_l",
 					frame_row:	2,
@@ -136,10 +137,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "mario_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "mario_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"mario_run_r",
 					frame_row:	0,
@@ -149,10 +150,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "mario_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "mario_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"mario_run_l",
 					frame_row:	2,
@@ -162,10 +163,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		true
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "mario_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "mario_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_stop_r",
 					frame_row:	0,
@@ -175,10 +176,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "mario_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "mario_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"m_stop_l",
 					frame_row:	2,
@@ -188,7 +189,7 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-                global_package_items.push(
+                def_package_items.push(
             {
 		id:				"azucola_sheet",
 		resource_type:	RESOURCE_SPRITE,
@@ -197,10 +198,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_height:	67,
 		animations:		[]
 });
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "azucola_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "azucola_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"g1_down",
 					frame_row:	1,
@@ -210,10 +211,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "azucola_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "azucola_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"g1_idle",
 					frame_row:	1,
@@ -223,10 +224,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "azucola_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "azucola_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"g1_jump",
 					frame_row:	1,
@@ -236,10 +237,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "azucola_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "azucola_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"g2_cry",
 					frame_row:	14,
@@ -249,10 +250,10 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < global_package_items.length; i++)
+		for(var i = 0; i < def_package_items.length; i++)
         {						
-			if(global_package_items[i].id == "azucola_sheet")
-				global_package_items[i].animations.push
+			if(def_package_items[i].id == "azucola_sheet")
+				def_package_items[i].animations.push
 				({
 					id:			"g2_idle",
 					frame_row:	14,
@@ -262,8 +263,8 @@ var SoundUtils = new ms.ui.SoundUtils();
 					right_to_left:		false
 				});
 		}		
-        var global_package = new ms.streamer.Package(streamer, global_package_items);	
-		global_package.load();	
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	function updater()  
@@ -282,8 +283,8 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
 var monster;var girl1;var girl2;var mario;var lbl1;var lbl2;var lbl3;
-            application.left_key_press = false;
-            application.right_key_press = false;
+                application.left_key_press = false;
+                application.right_key_press = false;
 	var ev_parent = this;
 	application.events.addListener("keydown", function(keycode)
 	{    
@@ -369,15 +370,12 @@ window.onload = function()
 		    monster = new ms.ui.Sprite( 
 	    "monster_sheet",g_ui_root.manager, g_ui_root);
         monster = monster;
-            monster.set_x(200);
-            monster.set_y(200);
-            monster.set_animation("m_idle");
+                monster.set_animation("m_idle");
+                monster.position(200, 200);
 		    girl1 = new ms.ui.Sprite( 
 	    "azucola_sheet",g_ui_root.manager, g_ui_root);
         girl1 = girl1;
-            girl1.set_x(300);
-            girl1.set_y(200);
-            girl1.set_animation("g1_idle");
+                girl1.set_animation("g1_idle");
 	var ev_parent = this;
 	girl1.events.addListener("click", function()
 	{    
@@ -389,12 +387,11 @@ girl1.set_animation("g1_idle");
 	}
 	);
 		application.are_obj_events = true;
+                girl1.position(300, 200);
 		    girl2 = new ms.ui.Sprite( 
 	    "azucola_sheet",g_ui_root.manager, g_ui_root);
         girl2 = girl2;
-            girl2.set_x(400);
-            girl2.set_y(200);
-            girl2.set_animation("g2_idle");
+                girl2.set_animation("g2_idle");
 	var ev_parent = this;
 	girl2.events.addListener("click", function()
 	{    
@@ -405,30 +402,27 @@ girl2.set_animation("g2_idle");
 	}
 	);
 		application.are_obj_events = true;
+                girl2.position(400, 200);
 		    mario = new ms.ui.Sprite( 
 	    "mario_sheet",g_ui_root.manager, g_ui_root);
         mario = mario;
-            mario.set_x(300);
-            mario.set_y(400);
-            mario.set_animation("m_idle_r");
+                mario.set_animation("m_idle_r");
+                mario.position(300, 400);
 		    lbl1 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl1 = lbl1;
-            lbl1.set_x(100);
-            lbl1.set_y(100);
-            lbl1.text("Press left arrow to walk the monster");
+                lbl1.text("Press left arrow to walk the monster");
+                lbl1.position(100, 100);
 		    lbl2 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl2 = lbl2;
-            lbl2.set_x(100);
-            lbl2.set_y(120);
-            lbl2.text("Click the blond girl to crash her down and jump later (testing animation queue)");
+                lbl2.text("Click the blond girl to crash her down and jump later (testing animation queue)");
+                lbl2.position(100, 120);
 		    lbl3 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl3 = lbl3;
-            lbl3.set_x(100);
-            lbl3.set_y(140);
-            lbl3.text("Click the triguena girl to make her cry (testing animation bounce)");
+                lbl3.text("Click the triguena girl to make her cry (testing animation bounce)");
+                lbl3.position(100, 140);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -449,8 +443,9 @@ girl2.set_animation("g2_idle");
 }
 </script>
 </head>
-<body>	
-	<canvas id="myCanvas" width="600" height="600"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+<body>
+	<canvas id="myCanvas" width="600" height="600">
+		<p>Your browser doesn't support canvas.</p>
+	</canvas>
 </body>
 </html>
