--- a/xss/production/test/ui_video.html
+++ b/xss/production/test/ui_video.html
@@ -6,11 +6,12 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-ui.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/ms-ui.js"></script>
-		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -28,7 +29,6 @@ var SoundUtils = new ms.ui.SoundUtils();
 				height: 600,
 				canvas: drawingCanvas
 			};
-            var streamer = new ms.streamer.Streamer();							
 			var ui = new ms.ui.Manager(client, streamer);
 			var g_ui = ui;
 			var g_ui_root = ui.root;
@@ -200,6 +200,8 @@ window.onload = function()
 {
 	drawingCanvas = document.getElementById("myCanvas");
     g_canvas = drawingCanvas;
+	w_canvas = document.getElementById("water_canvas");
+	w_context = w_canvas.getContext('2d');
 	if (drawingCanvas && drawingCanvas.getContext)
 	{
 		var client =
@@ -228,23 +230,15 @@ window.onload = function()
 		    v = new ms.ui.Video( 
 	    "video/sintel.mp4",g_ui_root.manager, g_ui_root);
         v = v;
-            v.set_x(50);
-            v.set_y(50);
-            v.set_width(400);
-            v.set_height(200);
+                v.rect(50, 50, 400, 200);
 		    lbl1 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
         lbl1 = lbl1;
-            lbl1.set_x(40);
-            lbl1.set_y(300);
-            lbl1.text("Volume controls");
+                lbl1.text("Volume controls");
+                lbl1.position(40, 300);
 		    btnVolUp = new ms.ui.Image( 
 	    "images/plus.png",g_ui_root.manager, g_ui_root);
         btnVolUp = btnVolUp;
-            btnVolUp.set_x(20);
-            btnVolUp.set_y(320);
-            btnVolUp.set_width(30);
-            btnVolUp.set_height(30);
 	var ev_parent = this;
 	btnVolUp.events.addListener("click", function()
 	{    
@@ -252,13 +246,10 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnVolUp.rect(20, 320, 30, 30);
 		    btnVolDown = new ms.ui.Image( 
 	    "images/minus.png",g_ui_root.manager, g_ui_root);
         btnVolDown = btnVolDown;
-            btnVolDown.set_x(60);
-            btnVolDown.set_y(320);
-            btnVolDown.set_width(30);
-            btnVolDown.set_height(30);
 	var ev_parent = this;
 	btnVolDown.events.addListener("click", function()
 	{    
@@ -266,13 +257,10 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnVolDown.rect(60, 320, 30, 30);
 		    btnMute = new ms.ui.StateButton( 
 	    "images/sound_on.png","images/sound_off.png",g_ui_root.manager, g_ui_root);
         btnMute = btnMute;
-            btnMute.set_x(100);
-            btnMute.set_y(320);
-            btnMute.set_width(30);
-            btnMute.set_height(30);
 	var ev_parent = this;
 	btnMute.events.addListener("click", function()
 	{    
@@ -280,19 +268,15 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnMute.rect(100, 320, 30, 30);
 		    lbl2 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
         lbl2 = lbl2;
-            lbl2.set_x(200);
-            lbl2.set_y(300);
-            lbl2.text("Playback controls");
+                lbl2.text("Playback controls");
+                lbl2.position(200, 300);
 		    btnPlay = new ms.ui.Button( 
 	    "images/play.png","images/play_over.png",g_ui_root.manager, g_ui_root);
         btnPlay = btnPlay;
-            btnPlay.set_x(180);
-            btnPlay.set_y(315);
-            btnPlay.set_width(40);
-            btnPlay.set_height(40);
 	var ev_parent = this;
 	btnPlay.events.addListener("click", function()
 	{    
@@ -300,13 +284,10 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnPlay.rect(180, 315, 40, 40);
 		    btnPause = new ms.ui.Button( 
 	    "images/pause.png","images/pause_over.png",g_ui_root.manager, g_ui_root);
         btnPause = btnPause;
-            btnPause.set_x(220);
-            btnPause.set_y(315);
-            btnPause.set_width(40);
-            btnPause.set_height(40);
 	var ev_parent = this;
 	btnPause.events.addListener("click", function()
 	{    
@@ -314,13 +295,10 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnPause.rect(220, 315, 40, 40);
 		    btnStop = new ms.ui.Button( 
 	    "images/stop.png","images/stop_over.png",g_ui_root.manager, g_ui_root);
         btnStop = btnStop;
-            btnStop.set_x(260);
-            btnStop.set_y(315);
-            btnStop.set_width(40);
-            btnStop.set_height(40);
 	var ev_parent = this;
 	btnStop.events.addListener("click", function()
 	{    
@@ -328,19 +306,15 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnStop.rect(260, 315, 40, 40);
 		    lbl3 = new ms.ui.Label( 
 	    "Verdana",g_ui_root.manager, g_ui_root);
         lbl3 = lbl3;
-            lbl3.set_x(360);
-            lbl3.set_y(300);
-            lbl3.text("Rotation controls");
+                lbl3.text("Rotation controls");
+                lbl3.position(360, 300);
 		    btnRotLeft = new ms.ui.Image( 
 	    "images/rota_left.png",g_ui_root.manager, g_ui_root);
         btnRotLeft = btnRotLeft;
-            btnRotLeft.set_x(365);
-            btnRotLeft.set_y(320);
-            btnRotLeft.set_width(30);
-            btnRotLeft.set_height(30);
 	var ev_parent = this;
 	btnRotLeft.events.addListener("click", function()
 	{    
@@ -348,13 +322,10 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnRotLeft.rect(365, 320, 30, 30);
 		    btnRotRight = new ms.ui.Image( 
 	    "images/rota_right.png",g_ui_root.manager, g_ui_root);
         btnRotRight = btnRotRight;
-            btnRotRight.set_x(405);
-            btnRotRight.set_y(320);
-            btnRotRight.set_width(30);
-            btnRotRight.set_height(30);
 	var ev_parent = this;
 	btnRotRight.events.addListener("click", function()
 	{    
@@ -362,6 +333,7 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
+                btnRotRight.rect(405, 320, 30, 30);
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -384,6 +356,8 @@ window.onload = function()
 </head>
 <body>	
 	<canvas id="myCanvas" width="800" height="600"
-		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
+		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>
+	<canvas id="water_canvas" width="800" height="600"
+		style="position: absolute; left: 0; top: 0; z-index: 0;"></canvas>
 </body>
 </html>
