--- a/xss/production/test/wgl_materials.html
+++ b/xss/production/test/wgl_materials.html
@@ -9,18 +9,20 @@
 	background:Black;
 	}
 </style>
+<script type="text/javascript" src="../js/three/Detector.js"></script>
+<script type="text/javascript" src="../js/three/Three.js"></script>
+<script type="text/javascript" src="../js/three/Stats.js"></script>
+<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
-		<script type="text/javascript" src="../js/three/Three.js"></script>
-		<script type="text/javascript" src="../js/three/Stats.js"></script>
-		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-		<script type="text/javascript" src="../js/three/Utils.js"></script>
-		<script type="text/javascript" src="../js/three/Detector.js"></script>
 <script type="text/javascript">		
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -114,8 +116,8 @@ var camera_1 =
 new THREE.Camera(
 45,1.5,1,2000);
 		active_camera = camera_1;
-            camera_1.position.z = 800;
-            camera_1.position.y = 200;
+                camera_1.position.z = 800;
+                camera_1.position.y = 200;
 var amb_light_1 = 
 new THREE.AmbientLight(
 0x202020);
@@ -126,9 +128,9 @@ new THREE.DirectionalLight(
 Math.random() * 0xffffff);
 		;
 	scene.addLight(dir_light_1);
-            dir_light_1.position.x = Math.random() - 0.5;
-            dir_light_1.position.y = Math.random() - 0.5;
-            dir_light_1.position.z = Math.random() - 0.5;
+                dir_light_1.position.x = Math.random() - 0.5;
+                dir_light_1.position.y = Math.random() - 0.5;
+                dir_light_1.position.z = Math.random() - 0.5;
 	    var particle_1_sphere = 
 new THREE.Sphere(
 4,8,8);
@@ -146,10 +148,10 @@ new THREE.Plane(
 	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
-            plane_1.position.y = -70;
-            set_rotation_x(plane_1.rotation, -90);
-            application.timer = null;
-            application.objects = [];
+                plane_1.position.y = -70;
+                set_rotation_x(plane_1.rotation, -90);
+                application.timer = null;
+                application.objects = [];
 	var ev_parent = this;
 	application.events.addListener("init", function()
 	{    
