--- a/xss/production/test/wgl_package.html
+++ b/xss/production/test/wgl_package.html
@@ -62,8 +62,8 @@ application.events = new ms.event.EventHolder();
 		frame_height:	null,
 		animations:		[]
 });
-				var pack_1 = new ms.streamer.Package(streamer);
-                pack_1.add_item(
+				var pack_1_items = [];
+                pack_1_items.push(
             {
 		id:				"__image4",
 		resource_type:	RESOURCE_IMAGE,
@@ -72,7 +72,7 @@ application.events = new ms.event.EventHolder();
 		frame_height:	null,
 		animations:		[]
 });
-                pack_1.add_item(
+                pack_1_items.push(
             {
 		id:				"__image5",
 		resource_type:	RESOURCE_IMAGE,
@@ -105,36 +105,38 @@ var camera_1 =
 new THREE.Camera(
 45,1.5,1,10000);
 		active_camera = camera_1;
-            camera_1.position.x = 500;
-            camera_1.position.y = 500;
-            camera_1.position.z = 1000;
+                camera_1.position.x = 500;
+                camera_1.position.y = 500;
+                camera_1.position.z = 1000;
 	    var plane_1_plane = 
 new THREE.Plane(
 128,164);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
-            plane_1.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test1.png").asset);
-            plane_1.position.x = 100;
-            plane_1.position.y = 100;
+                plane_1.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test1.png").asset);
+                plane_1.position.x = 100;
+                plane_1.position.y = 100;
 	    var plane_2_plane = 
 new THREE.Plane(
 128,164);
 	    var plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ms.event.EventHolder();
-            plane_2.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test2.png").asset);
-            plane_2.position.x = 300;
-            plane_2.position.y = 100;
+                plane_2.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test2.png").asset);
+                plane_2.position.x = 300;
+                plane_2.position.y = 100;
 	    var plane_3_plane = 
 new THREE.Plane(
 128,164);
 	    var plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ms.event.EventHolder();
-            plane_3.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test3.png").asset);
-            plane_3.position.x = 100;
-            plane_3.position.y = 300;
+                plane_3.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test3.png").asset);
+                plane_3.position.x = 100;
+                plane_3.position.y = 300;
+				var pack_1 = 
+					new ms.streamer.Package(streamer, pack_1_items);
 				pack_1.events.addListener("loaded", function()
 				{				
 var container = 
@@ -149,8 +151,8 @@ new THREE.Plane(
 		plane_4.events = new ms.event.EventHolder();
 				container.addChild(plane_4);
 				scene.addObject(container);
-            plane_4.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test4.png").asset);
-            plane_4.position.x = -100;
+                plane_4.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test4.png").asset);
+                plane_4.position.x = -100;
 	    var plane_5_plane = 
 new THREE.Plane(
 128,164);
@@ -159,8 +161,8 @@ new THREE.Plane(
 		plane_5.events = new ms.event.EventHolder();
 				container.addChild(plane_5);
 				scene.addObject(container);
-            plane_5.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test5.png").asset);
-            plane_5.position.x = -400;
+                plane_5.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test5.png").asset);
+                plane_5.position.x = -400;
 });
 	var ev_parent = this;
 	application.events.addListener("click", function()
